Checking informations et updating

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,7 @@ interface Props {
 }
 
 const {
-  content = "Étudiant en dernière année de Master en Informatique à l'Université de Paris. Spécialisé en développement web et en systèmes distribués, je combine rigueur académique et expérience pratique pour créer des applications performantes et maintenables. Curieux et autodidacte, je m'investis continuellement dans l'apprentissage de nouvelles technologies.",
+  content = "Étudiant en troisième année  année de Master en Informatique à l'Université de Paris. Spécialisé en développement web et en systèmes distribués, je combine rigueur académique et expérience pratique pour créer des applications performantes et maintenables. Curieux et autodidacte, je m'investis continuellement dans l'apprentissage de nouvelles technologies.",
 } = Astro.props;
 ---
 
