--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -12,21 +12,19 @@ const {
   categories = [
     {
       name: "Langages",
-      items: ["TypeScript", "JavaScript", "Python", "Java", "C++", "SQL"],
+      items: ["Latex", "SQL"],
     },
     {
       name: "Outils & Frameworks",
-      items: ["React", "Node.js", "Git", "Docker", "PostgreSQL", "Linux"],
+      items: ["Vue", "Node.js", "Git", "Docker", "PostgreSQL", "Linux"],
     },
     {
       name: "Concepts",
       items: [
-        "Algorithmes",
+        "Algorithmique",
         "Structures de données",
-        "Architecture logicielle",
-        "Tests unitaires",
-        "CI/CD",
-        "Méthodes agiles",
+        "Modélisation Objet UML et Mérise",
+        ""
       ],
     },
   ],
