--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -12,11 +12,15 @@ const {
   categories = [
     {
       name: "Langages",
-      items: ["Latex", "SQL"],
+      items: ["Latex", "SQL", "HTML5", "CSS3", "JavaScript", "Python", "Java", "C++","C","PHP", "Markdown"],
     },
     {
       name: "Outils & Frameworks",
-      items: ["Vue", "Node.js", "Git", "Docker", "PostgreSQL", "Linux"],
+      items: ["Vue.js" ,"Astro.js", "Git/GitHub", "MySQL", "PostgreSQL", "Nympy","Maptoplotlib", "Excel" ],
+    },
+    {
+      name: "Environnements",
+      items: ["Visual Studio Code", "PyCharm", "MacOS", "Windows", "Linux"],
     },
     {
       name: "Concepts",
@@ -24,7 +28,11 @@ const {
         "Algorithmique",
         "Structures de données",
         "Modélisation Objet UML et Mérise",
-        ""
+        "Nettoyage et visualisation de données",
+        "Bases de données relationnelles",
+        "Développement web front-end",
+        "Développement web back-end",
+        "Contrôle de version avec Git",
       ],
     },
   ],
