ready for the first publication

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -12,17 +12,17 @@ const {
   categories = [
     {
       name: "Langages",
-      items: ["Latex", "SQL", "HTML5", "CSS3", "JavaScript", "Python", "Java", "C++","C","PHP", "Markdown"],
+      items: ["Latex", "SQL", "HTML5/CSS3", "JavaScript", "Python", "Java","C","PHP", "Markdown"],
     },
     {
       name: "Outils & Frameworks",
-      items: ["Vue.js" ,"Astro.js", "Git/GitHub", "MySQL", "PostgreSQL", "Nympy","Maptoplotlib", "Excel" ],
+      items: ["Vue.js" ,"Astro.js", "Git/GitHub", "MySQL", "PostgreSQL", "Nympy","Matplotlib", "Excel", "TailwindCss" ],
     },
     {
-      name: "Environnements",
+      name: "Environnements et Systèmes d'exploitation",
       items: ["Visual Studio Code", "PyCharm", "MacOS", "Windows", "Linux"],
     },
-    {
+    /*{
       name: "Concepts",
       items: [
         "Algorithmique",
@@ -34,7 +34,7 @@ const {
         "Développement web back-end",
         "Contrôle de version avec Git",
       ],
-    },
+    },*/
   ],
 } = Astro.props;
 ---
