update certifications and About's components infos

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,7 @@ interface Props {
 }
 
 const {
-  content = "Je suis étudiant en L3 Informatique CILS à l'Université Évry Paris-Saclay. Je combine rigueur académique et expérience pratique pour créer des applications performantes et maintenables. Curieux et autodidacte, je m'investis continuellement dans l'apprentissage de nouvelles technologies.",
+  content = "Étudiant en L3 Informatique CILS à l'Université Évry Paris-Saclay, je suis passionné par l'exploitation des données au service de la prise de décision stratégique",
 } = Astro.props;
 ---
 
