--- a/src/components/Certifications.astro
+++ b/src/components/Certifications.astro
@@ -18,6 +18,11 @@ const {
       year: "2025",
       mention: "Mention Bien",
     },
+    {
+      name: "Python for Data Analysis",
+      issuer: "OpenClassrooms",
+      year: "2025",
+    }
   ],
 } = Astro.props;
 ---
