--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,7 @@ interface Props {
 }
 
 const {
-  content = "Étudiant en L3 Informatique CILS à l'Université Évry Paris-Saclay, je suis passionné par l'exploitation des données au service de la prise de décision stratégique",
+  content = "je suis animé par la conviction que l'analyse de données est un levier puissant pour répondre aux grands défis sociétaux et environnementaux de demain.Actuellement en pleine montée en compétences sur l'écosystème Data, je combine ma formation académique avec une veille technologique constante. Mais je ne suis pas qu'un profil technique : je crois fermement à l'importance de l'ouverture d'esprit.Mon profil s'enrichit d'un fort intérêt pour la culture générale, indispensable pour donner du sens aux chiffres, et d'un goût prononcé pour le sport qui canalise mon énergie. D'nature curieuse, je suis également un linguophile amateur, appréciant la découverte de nouvelles cultures et la logique des mots, une gymnastique intellectuelle qui sert mon esprit d'analyse au quotidien.",
 } = Astro.props;
 ---
 
