--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -40,7 +40,7 @@ const {
       organization: "Ministère de l'Agriculture de l'Élevage et de la Pêche (MAEP) Bénin",
       location: "Cotonou, Bénin",
       period: "Mai - Août 2024",
-      description:"Ajout d'un modèle de chiffrement au système d'archivage Maarch RM pour renforcement de la sécurité des données.",    },
+      description:"Ajout d'un module de chiffrement au système d'archivage Maarch RM pour renforcement de la sécurité des données.",    },
        {
       role: "Développeur (Stagiaire)",
       organization: "Blolab Bénin",
