updating after Jose recommandation : justification of the about's text

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -40,10 +40,11 @@ interface Props {
     font-size: var(--font-size-lg);
     line-height: 1.85;
     color: var(--color-dark);
-    padding: var(--spacing-lg);
+    padding: var(--spacing-sm);
     border: 1px solid transparent;
     border-radius: 8px;
     transition: all 0.3s ease;
+    text-align: justify;
   }
 
   .about-content:hover {
